--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "parcel-bundler": "^1.12.5",
     "typescript": "^5.1.3"
   },
   "scripts": {
     "tsc": "tsc index.ts",
     "dev": "parcel index.html",
-    "prod": "parcel build index.html"
+    "build": "rm -rf .cache dist && parcel build index.html",
+    "deploy": "gh-pages -d dist"
   }
 }
